--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body> 
         <div class="container">
-            <p>Hellozzz</p>
+            <p>Hello Juga</p>
         </div>
     </body>
 </html>
