--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <html>
     <head>
-        <title>Kevin JG</title>
+        <title>Ini title</title>
         <link rel="stylesheet" href="style.css" type="style/css">
-        <link rel="stylesheet" href="" type="style/css">
     </head>
-    <body> 
+    <body>
         <div class="container">
             <p>Hello Juga</p>
             <p>Nama saya Kevin</p>
-            <h1> nama saya hamzah </h1>
+            <p>Nama saya hamzah </p>
         </div>
+        <table>
+            <tr>
+                <td>
+                    <p>Hello Juga</p>
+                </td>
+                <td>
+                    <p>iya Juga</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>ah masa Juga</p>
+                </td>
+                <td>
+                    <p>gelut nih</p>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
