--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <p>Nama saya Kevin</p>
             <p>Nama saya hamzah </p>
         </div>
-        <table>
+        <table id="iniTabel">
             <tr>
                 <td>
                     <p>Hello Juga</p>
@@ -28,4 +28,4 @@
             </tr>
         </table>
     </body>
-</html>
+</html> 
