--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <table id="iniTabel">
             <tr>
                 <td>
-                    <p>Hello Juga</p>
+                    <p>Hello juga</p>
                 </td>
                 <td>
-                    <p>iya Juga</p>
+                    <p>iya juga</p>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <p>ah masa Juga</p>
+                    <p>ah masa juga</p>
                 </td>
                 <td>
                     <p>gelut nih</p>
@@ -28,4 +28,4 @@
             </tr>
         </table>
     </body>
-</html> 
+</html>
