--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <p>Hello Juga</p>
             <p>Nama saya Kevin</p>
             <p>Nama saya hamzah </p>
+            <p>Mendaki Gunung~</p>
         </div>
         <table id="iniTabel">
             <tr>
