--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p>ah masa juga</p>
                 </td>
                 <td>
-                    <p>gelut nih</p>
+                    <p>Melaut nih</p>
                 </td>
             </tr>
         </table>
