--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div class="container">
             <p>Hello Juga</p>
             <p>Nama saya Kevin</p>
-            <p>Nama saya hamzah </p>
+            <p>Nama saya Genzo </p>
             <p>Mendaki Gunung~</p>
         </div>
         <table id="iniTabel">
