--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <body>
         <div class="container">
             <p>Hello Juga</p>
-            <p>Nama saya Kevin</p>
+            <p>Nama saya Hamzah Prawira</p>
             <p>Nama saya Genzo </p>
-            <p>Mendaki Gunung~</p>
+            <p>Jurus macan bangau~</p>
         </div>
         <table id="iniTabel">
             <tr>
