--- a/bukanindex.html
+++ b/bukanindex.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Challange Pak Adam</title>
+        <title>Challange Pak Adam Baru</title>
         <link rel="stylesheet" href="style.css" type="style/css">
     </head>
     <body>
