--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <p>Hello Juga</p>
             <p>Nama saya Hamzah Prawira</p>
             <p>Nama saya Genzo </p>
-            <p>Jurus macan bangau~</p>
+            <p>Jurus macan bangau angsa~</p>
         </div>
         <table id="iniTabel">
             <tr>
