--- a/index_ke2.html
+++ b/index_ke2.html
@@ -5,10 +5,7 @@
     </head>
     <body>
         <div class="container">
-            <p>Hello Juga</p>
-            <p>Nama saya Hamzah Prawira</p>
-            <p>Nama saya Genzo </p>
-            <p>Jurus macan bangau angsa~</p>
+            <H1>Kerja bagai Kyuda</H1>
         </div>
         <table id="iniTabel">
             <tr>
